# Sama-Connect

./: .env  .env.example  Dockerfile.backend  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  app.py  cert.pem  key.pem
app/models/: meet_data.py  user_data.py
app/routes/: meet_routes.py
app/schemas/: auth_schema.py  meet_schema.py
app/services/: meet_service.py
frontend/: .env  .env.example  DEVELOPMENT_SETUP.md  Dockerfile.frontend  README.md  cert.pem  index.html  key.pem  package-lock.json  package.json  start-dev.js  tailwind.config.ts  vite.config.ts
frontend/public/: preload.js
frontend/src/: App.tsx  index.css  routes.tsx
frontend/src/components/: Navbar.tsx  PasswordDialog.tsx
frontend/src/components/room/: ChatPanel.tsx  ControlBar.tsx  MiroTalkMeet.tsx  ParticipantsList.tsx  VideoGrid.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: Auth.tsx  Dashboard.tsx  Index.tsx  JoinRoom.tsx  Landing.tsx  MeetingRoom.tsx  NewRoom.tsx  Profile.tsx  Room.tsx
frontend/src/services/: api.ts  peer.ts  websocket.ts
frontend/src/types/: index.ts
frontend/src/utils/: media.ts
